--- a/src/View/MainPage.fxml
+++ b/src/View/MainPage.fxml
@@ -1,26 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="View.MainPageController">
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <Button fx:id="LoginButton" layoutX="14.0" layoutY="20.0" mnemonicParsing="false" text="Login" />
-            <Button fx:id="SearchButton" layoutX="14.0" layoutY="100.0" mnemonicParsing="false" text="Search for a user" />
-            <Button fx:id="SignUpButton" layoutX="14.0" layoutY="60.0" mnemonicParsing="false" text="Sign up" />
-         </children>
-      </Pane>
+      <ImageView fitHeight="238.0" fitWidth="250.0" layoutX="181.0" layoutY="-38.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Downloads/LogoSample_ByTailorBrands.jpg" />
+         </image>
+      </ImageView>
+      <TextField layoutX="225.0" layoutY="128.0" promptText="Username" />
+      <TextField layoutX="226.0" layoutY="174.0" promptText="Password" />
+      <ImageView fitHeight="25.0" fitWidth="43.0" layoutX="195.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Desktop/17241-200.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="193.0" layoutY="171.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Desktop/thread-lock.jpeg" />
+         </image>
+      </ImageView>
+      <Text layoutX="226.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not registered yet? Click here!">
+         <font>
+            <Font size="9.0" />
+         </font>
+      </Text>
+      <Button layoutX="260.0" layoutY="225.0" mnemonicParsing="false" text="Login" />
    </children>
-</GridPane>
+</AnchorPane>
