--- a/src/View/HomePage.fxml
+++ b/src/View/HomePage.fxml
@@ -10,25 +10,17 @@
    <children>
       <Button layoutX="180.0" layoutY="170.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Search Users" />
       <Button layoutX="186.0" layoutY="227.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="Delete My User" />
-      <ImageView fitHeight="43.0" fitWidth="42.0" layoutX="21.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Desktop/settings_icon.png" />
-         </image>
+      <ImageView fx:id="settingsImage" fitHeight="43.0" fitWidth="42.0" layoutX="21.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="143.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Desktop/59cfc4d2d3b1936210a5ddc7.png" />
-         </image>
+      <ImageView fx:id="magnifyImage" fitHeight="25.0" fitWidth="26.0" layoutX="143.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true">
+
       </ImageView>
-      <ImageView fitHeight="101.0" fitWidth="187.0" layoutX="139.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Desktop/IMG-20181021-WA0005.jpg" />
-         </image>
+      <ImageView fx:id="logo2" fitHeight="101.0" fitWidth="187.0" layoutX="139.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="148.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Desktop/trash.png" />
-         </image>
+      <ImageView fx:id="trashImage" fitHeight="25.0" fitWidth="25.0" layoutX="148.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
+
       </ImageView>
    </children>
 </AnchorPane>
