--- a/src/View/MainPage.fxml
+++ b/src/View/MainPage.fxml
@@ -10,22 +10,16 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MainPageController">
    <children>
-      <ImageView fitHeight="238.0" fitWidth="250.0" layoutX="181.0" layoutY="-38.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Downloads/LogoSample_ByTailorBrands.jpg" />
-         </image>
+      <ImageView fx:id="logo" fitHeight="238.0" fitWidth="250.0" layoutX="181.0" layoutY="-38.0" pickOnBounds="true" preserveRatio="true">
+
       </ImageView>
       <TextField fx:id="usernameTextField" layoutX="225.0" layoutY="128.0" promptText="Username" />
       <TextField fx:id="passwordTextField" layoutX="226.0" layoutY="174.0" promptText="Password" />
-      <ImageView fitHeight="25.0" fitWidth="43.0" layoutX="195.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Desktop/17241-200.png" />
-         </image>
+      <ImageView fx:id="userIcon" fitHeight="25.0" fitWidth="43.0" layoutX="195.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true">
+
       </ImageView>
-      <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="193.0" layoutY="171.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Desktop/thread-lock.jpeg" />
-         </image>
+      <ImageView fx:id="passwordIcon" fitHeight="32.0" fitWidth="32.0" layoutX="193.0" layoutY="171.0" pickOnBounds="true" preserveRatio="true">
+
       </ImageView>
       <Text fx:id="NotregisteredTextField" layoutX="226.0" layoutY="286.0" onMouseClicked="#NotRegistedPressed" strokeType="OUTSIDE" strokeWidth="0.0" text="Not registered yet? Click here!">
          <font>
