--- a/src/View/SearchPage.fxml
+++ b/src/View/SearchPage.fxml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SearchPageController">
    <children>
-      <TextField fx:id="searchTextField" layoutX="91.0" layoutY="62.0" />
-      <Button layoutX="247.0" layoutY="62.0" mnemonicParsing="false" onAction="#searchButtonClicked" text="Button" />
-      <ListView fx:id="searchResultList" layoutX="91.0" layoutY="124.0" prefHeight="200.0" prefWidth="364.0" />
+      <TextField fx:id="searchTextField" layoutX="40.0" layoutY="62.0" prefHeight="25.0" prefWidth="198.0" />
+      <Button layoutX="246.0" layoutY="62.0" mnemonicParsing="false" onAction="#searchButtonClicked" text="Button" />
+      <TableView fx:id="searchResultTable" layoutX="2.0" layoutY="124.0" prefHeight="230.0" prefWidth="592.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="username" />
+          <TableColumn prefWidth="75.0" text="first name" />
+            <TableColumn prefWidth="75.0" text="last name" />
+            <TableColumn prefWidth="75.0" text="city" />
+            <TableColumn prefWidth="75.0" text="birth date" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
