register logic complete

--- a/src/View/MainPage.fxml
+++ b/src/View/MainPage.fxml
@@ -8,13 +8,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MainPageController">
    <children>
       <ImageView fx:id="logo" fitHeight="238.0" fitWidth="250.0" layoutX="181.0" layoutY="-38.0" pickOnBounds="true" preserveRatio="true">
 
       </ImageView>
       <TextField fx:id="usernameTextField" layoutX="225.0" layoutY="128.0" promptText="Username" />
-      <TextField fx:id="passwordTextField" layoutX="226.0" layoutY="174.0" promptText="Password" />
+      <!--<TextField fx:id="passwordTextField" layoutX="226.0" layoutY="174.0" promptText="Password" />-->
+      <PasswordField fx:id="passwordTextField" layoutX="226.0" layoutY="174.0" promptText="Password"></PasswordField>
       <ImageView fx:id="userIcon" fitHeight="25.0" fitWidth="43.0" layoutX="195.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true">
 
       </ImageView>
