--- a/src/View/HomePage.fxml
+++ b/src/View/HomePage.fxml
@@ -12,7 +12,7 @@
       <Button layoutX="180.0" layoutY="170.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Search Users" />
       <Button layoutX="186.0" layoutY="227.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="Delete My User" onMouseClicked="#deleteUser"/>
       <ImageView fx:id="settingsImage" fitHeight="43.0" fitWidth="42.0" layoutX="21.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#goToSettings"></ImageView>
-      <ImageView fx:id="signOutImage" fitHeight="43.0" fitWidth="42.0" layoutX="390" layoutY="18.0" pickOnBounds="true" preserveRatio="true"></ImageView>
+      <ImageView fx:id="signOutImage" fitHeight="43.0" fitWidth="42.0" layoutX="390" layoutY="18.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#signOutClicked"></ImageView>
 
       <ImageView fx:id="magnifyImage" fitHeight="25.0" fitWidth="26.0" layoutX="143.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true">
 
