--- a/src/View/Update.fxml
+++ b/src/View/Update.fxml
@@ -7,19 +7,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UpdateController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UpdateController">
    <children>
       <Text layoutX="149.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update" wrappingWidth="247.37865447998047">
          <font>
             <Font name="Ink Free" size="47.0" />
          </font>
       </Text>
-      <TextField fx:id="UserName" layoutX="149.0" layoutY="106.0" promptText="First Name" />
+      <TextField fx:id="UserName" layoutX="149.0" layoutY="106.0" promptText="Username" />
       <TextField fx:id="FirstNameText" layoutX="149.0" layoutY="145.0" promptText="First Name" />
       <TextField fx:id="LastNameText" layoutX="150.0" layoutY="184.0" promptText="Last Name" />
-      <TextField fx:id="CityText" layoutX="151.0" layoutY="284.0" promptText="City" />
-      <Button fx:id="UpdateButton" layoutX="272.0" layoutY="341" mnemonicParsing="false" text="Update" />
+      <TextField fx:id="CityText" layoutX="151.0" layoutY="266.0" promptText="City" />
+      <Button fx:id="UpdateButton" layoutX="272.0" layoutY="323" mnemonicParsing="false" onAction="#Update" text="Update" />
       <PasswordField fx:id="password" layoutX="151.0" layoutY="227.0" promptText="Password" />
    </children>
 </AnchorPane>
