--- a/src/View/Update.fxml
+++ b/src/View/Update.fxml
@@ -7,18 +7,30 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UpdateController">
+<AnchorPane fx:id="anchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UpdateController">
    <children>
       <Text layoutX="149.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update" wrappingWidth="247.37865447998047">
          <font>
             <Font name="Ink Free" size="47.0" />
          </font>
       </Text>
-      <TextField fx:id="UserName" layoutX="149.0" layoutY="106.0" promptText="Username" />
+      <Text text="Username:" layoutX="70" layoutY="120" ></Text>
+      <TextField fx:id="UserNameText" layoutX="149.0" layoutY="106.0" promptText="Username" />
+
+      <Text text="First Name:" layoutX="70" layoutY="159" ></Text>
       <TextField fx:id="FirstNameText" layoutX="149.0" layoutY="145.0" promptText="First Name" />
+
+      <Text text="Last Name:" layoutX="70" layoutY="198"></Text>
       <TextField fx:id="LastNameText" layoutX="150.0" layoutY="184.0" promptText="Last Name" />
+
+      <Text text="City:" layoutX="70" layoutY="280"></Text>
       <TextField fx:id="CityText" layoutX="151.0" layoutY="266.0" promptText="City" />
+
       <Button fx:id="UpdateButton" layoutX="272.0" layoutY="323" mnemonicParsing="false" onAction="#Update" text="Update" />
+
+      <Text text="Password:" layoutX="70" layoutY="241"></Text>
       <PasswordField fx:id="password" layoutX="151.0" layoutY="227.0" promptText="Password" />
+
+      <Text fx:id="process_message" layoutX="50" fill="red" layoutY="340"></Text>
    </children>
 </AnchorPane>
