--- a/src/View/SearchPage.fxml
+++ b/src/View/SearchPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SearchPageController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SearchPageView">
    <children>
       <TextField fx:id="searchTextField" layoutX="40.0" layoutY="62.0" prefHeight="25.0" prefWidth="198.0" />
       <TableView fx:id="searchResultTable" layoutX="2.0" layoutY="124.0" prefHeight="230.0" prefWidth="592.0">
