--- a/src/main/resources/Update.fxml
+++ b/src/main/resources/Update.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,25 +15,29 @@
             <Font name="Ink Free" size="47.0" />
          </font>
       </Text>
-      <Text text="Username:" layoutX="70" layoutY="120" />
-      <TextField fx:id="UserNameText" layoutX="149.0" layoutY="106.0" promptText="Username" />
+      <Text layoutX="70.0" layoutY="119.0" text="Username:" />
+      <TextField fx:id="UserNameText" layoutX="150.0" layoutY="102.0" promptText="Username" />
 
-      <Text text="First Name:" layoutX="70" layoutY="159" />
-      <TextField fx:id="FirstNameText" layoutX="149.0" layoutY="145.0" promptText="First Name" />
+      <Text layoutX="69.0" layoutY="158.0" text="First Name:" />
+      <TextField fx:id="FirstNameText" layoutX="150.0" layoutY="141.0" promptText="First Name" />
 
-      <Text text="Last Name:" layoutX="70" layoutY="198"/>
-      <TextField fx:id="LastNameText" layoutX="150.0" layoutY="184.0" promptText="Last Name" />
+      <Text layoutX="69.0" layoutY="198.0" text="Last Name:" />
+      <TextField fx:id="LastNameText" layoutX="149.0" layoutY="181.0" promptText="Last Name" />
 
-      <Text text="Password:" layoutX="70" layoutY="241"/>
-      <PasswordField fx:id="password" layoutX="151.0" layoutY="227.0" promptText="Password" />
+      <Text layoutX="68.0" layoutY="238.0" text="Password:" />
+      <PasswordField fx:id="password" layoutX="149.0" layoutY="221.0" promptText="Password" />
 
-      <Text text="City:" layoutX="70" layoutY="280"/>
-      <TextField fx:id="CityText" layoutX="151.0" layoutY="266.0" promptText="City" />
+      <Text layoutX="67.0" layoutY="278.0" text="Birth Date:" />
+       <DatePicker fx:id="BirthDate" layoutX="149.0" layoutY="260.0" promptText="Birth Date" />
 
-      <Button fx:id="UpdateButton" layoutX="272.0" layoutY="323" mnemonicParsing="false" onAction="#Update" text="Update" />
+      <Text layoutX="70.0" layoutY="316.0" text="City:" />
+      <TextField fx:id="CityText" layoutX="148.0" layoutY="300.0" promptText="City" />
+
+      <Button fx:id="UpdateButton" layoutX="321.0" layoutY="330.0" mnemonicParsing="false" onAction="#Update" text="Update" />
 
 
 
-      <Text fx:id="process_message" layoutX="50" fill="red" layoutY="340"/>
+      <Text fx:id="process_message" fill="red" layoutX="50" layoutY="340" />
+
    </children>
 </AnchorPane>
