--- a/src/main/resources/CreateVacation.fxml
+++ b/src/main/resources/CreateVacation.fxml
@@ -14,23 +14,23 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="648.0" fx:controller="View.CreateVacation" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="19.0" layoutY="60.0" prefHeight="17.0" prefWidth="43.0" text="Country" />
-      <TextField fx:id="TextFieldcountryName" layoutX="111.0" layoutY="56.0" />
-      <DatePicker fx:id="DeparturesDate" layoutX="111.0" layoutY="92.0" />
-      <DatePicker  fx:id="ArrivalsDate" layoutX="384.0" layoutY="92.0" />
+      <TextField promptText="Enter Destination" fx:id="TextFieldcountryName" layoutX="111.0" layoutY="56.0" />
+      <DatePicker fx:id="DeparturesDate" promptText="Chose Departures Date" layoutX="111.0" layoutY="92.0" />
+      <DatePicker fx:id="ArrivalsDate" promptText="Chose Arrivals Date" layoutX="384.0" layoutY="92.0" />
       <Label layoutX="19.0" layoutY="96.0" text="Departures Date" />
       <Label layoutX="307.0" layoutY="96.0" text="Arrivals Date" />
-      <Button fx:id="ButtonCreate" layoutX="237.0" layoutY="420.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="141.0" text="Create Vacation" />
+      <Button fx:id="ButtonCreate" onMouseClicked="#CreateVacation" layoutX="237.0" layoutY="420.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="141.0" text="Create Vacation" />
       <Label layoutX="21.0" layoutY="133.0" text="Tickets Quantity:">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <ComboBox fx:id="ChoiceBoxVacationKind" layoutX="130.0" layoutY="381.0" prefWidth="150.0" />
+      <ComboBox fx:id="ChoiceBoxVacationKind" promptText="Enter Vacation Kinds" layoutX="40.0" layoutY="381.0" prefWidth="150.0" />
       <Label layoutX="38.0" layoutY="385.0" text="Vacation Kind" />
-      <TextField layoutX="130.0" layoutY="307.0" />
+      <TextField promptText="Enter Airline" fx:id="TextFieldAirline" layoutX="130.0" layoutY="307.0" />
       <Label layoutX="40.0" layoutY="311.0" text="Airline" />
-      <ComboBox fx:id="ChoiceBoxTickKind" layoutX="130.0" layoutY="346.0" prefWidth="150.0" />
-      <Label layoutX="40.0" layoutY="350.0" text="Ticket Kind" />
+      <!--<ComboBox fx:id="ChoiceBoxTickKind" layoutX="130.0" layoutY="346.0" prefWidth="150.0" />-->
+      <!--<Label layoutX="40.0" layoutY="350.0" text="Ticket Kind" />-->
       <CheckBox fx:id="CheckBoxBaggage" layoutX="431.0" layoutY="326.0" mnemonicParsing="false" text="Include Return Flight" />
       <CheckBox fx:id="CheckBoxConnectionFlight" layoutX="431.0" layoutY="356.0" mnemonicParsing="false" text="have Connection Flight" />
       <CheckBox fx:id="CheckBoxReturnFlight" layoutX="431.0" layoutY="299.0" mnemonicParsing="false" text="Include baggage" />
