--- a/src/main/resources/SearchFlight.fxml
+++ b/src/main/resources/SearchFlight.fxml
@@ -12,7 +12,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" fx:controller="View.SearchFlight" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="29.0" layoutY="70.0" prefHeight="17.0" prefWidth="43.0" text="Country" />
-      <TextField onAction="#Country" fx:id="TextFieldCountry" layoutX="121.0" layoutY="66.0" />
+      <TextField promptText="Enter Destination" onAction="#Country" fx:id="TextFieldCountry" layoutX="121.0" layoutY="66.0" />
       <DatePicker onAction="#DateDepartures" fx:id="DatePickerDepartures" layoutX="121.0" layoutY="102.0" />
       <DatePicker onAction="#DateArrivals" fx:id="DatePickerArrivals" layoutX="394.0" layoutY="102.0" />
       <Label layoutX="29.0" layoutY="106.0" text="Departures Date" />
