--- a/src/main/resources/SignUp2.fxml
+++ b/src/main/resources/SignUp2.fxml
@@ -1,45 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.PasswordField?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="429.0" prefWidth="383.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SignUp2View">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="383.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SignUp2View">
    <children>
-      <Text layoutX="39.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="We're almost done..." wrappingWidth="360.0453109741211">
+      <Text layoutX="39.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="We're almost done..." wrappingWidth="360.0453109741211">
          <font>
             <Font name="Ink Free" size="38.0" />
          </font>
       </Text>
 
-      <TextField fx:id="userName" layoutX="126.0" layoutY="135.0" promptText="Username">
+      <TextField fx:id="userName" layoutX="126.0" layoutY="227.0" promptText="Username">
       </TextField>
       <!--<TextField>
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </TextField>-->
-      <PasswordField  fx:id="password" layoutX="126.0" layoutY="175.0" promptText="Password"></PasswordField>
-      <PasswordField  fx:id="passwordCnf" layoutX="126.0" layoutY="219.0" promptText="Password"></PasswordField>
+      <PasswordField fx:id="password" layoutX="126.0" layoutY="267.0" promptText="Password" />
+      <PasswordField fx:id="passwordCnf" layoutX="126.0" layoutY="311.0" promptText="Password" />
 
-      <Button fx:id="register" layoutX="270.0" layoutY="306.0" mnemonicParsing="false" text="Register" onMouseClicked="#registerUser"/>
-      <ImageView fx:id="airplaneImage" fitHeight="152.0" fitWidth="189.0" layoutX="26.0" layoutY="256.0" pickOnBounds="true" preserveRatio="true">
-
-      </ImageView>
-      <Text fx:id="process_message" layoutX="126.0" layoutY="265.0" fill="red" strokeType="OUTSIDE" strokeWidth="0.0" />
-      <ImageView fx:id="backImage" fitHeight="60.0" fitWidth="59.0" layoutX="9.0" layoutY="0.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#goBack">
+      <Button fx:id="register" layoutX="270.0" layoutY="373.0" mnemonicParsing="false" onMouseClicked="#registerUser" text="Register" />
+      <ImageView fx:id="airplaneImage" fitHeight="152.0" fitWidth="189.0" layoutX="27.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true">
 
       </ImageView>
-      <Text layoutX="27.0" layoutY="55" strokeType="OUTSIDE" strokeWidth="0.0" text="Go Back" onMouseClicked="#goBack">
+      <Text fx:id="process_message" fill="red" layoutX="126.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <ImageView fx:id="backImage" fitHeight="60.0" fitWidth="59.0" layoutX="9.0" layoutY="0.0" onMouseClicked="#goBack" pickOnBounds="true" preserveRatio="true">
+
+      </ImageView>
+      <Text layoutX="24.0" layoutY="51.0" onMouseClicked="#goBack" strokeType="OUTSIDE" strokeWidth="0.0" text="Go Back">
          <font>
             <Font size="8.0" />
          </font>
       </Text>
+      <Circle fx:id="profile_image_circle" fill="#e1eaf3" layoutX="189.0" layoutY="155.0" radius="58.0" stroke="BLACK" strokeType="INSIDE" onMouseClicked="#openImagePicker" />
+      <Label layoutX="236.0" layoutY="189.0" text="click to choose image" onMouseClicked="#openImagePicker">
+         <font>
+            <Font size="8.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
